--- a/tableViewAssignment/FriendTableViewCell.xib
+++ b/tableViewAssignment/FriendTableViewCell.xib
@@ -13,46 +13,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="170" id="KGk-i7-Jjw" customClass="FriendTableViewCell" customModule="tableViewAssignment" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="130"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="185.5" id="KGk-i7-Jjw" customClass="FriendTableViewCell" customModule="tableViewAssignment" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="480" height="148.5"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="129.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="480" height="148"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TJo-Tp-2an">
-                        <rect key="frame" x="0.0" y="0.0" width="480" height="129.5"/>
+                        <rect key="frame" x="0.0" y="14" width="480" height="132"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="friend" translatesAutoresizingMaskIntoConstraints="NO" id="b79-YH-Aix">
-                                <rect key="frame" x="16" y="10" width="100" height="100"/>
+                                <rect key="frame" x="16" y="16" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="XsF-Hi-LK5"/>
                                     <constraint firstAttribute="width" constant="100" id="bPo-e4-4q6"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Lisanne Viscaal" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IMx-OM-qao">
-                                <rect key="frame" x="132" y="20" width="227" height="23.5"/>
+                                <rect key="frame" x="132" y="16" width="232" height="23.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Edinburgh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rd4-eB-5gQ">
-                                <rect key="frame" x="132" y="49.5" width="73" height="20.5"/>
+                                <rect key="frame" x="132" y="44.5" width="73" height="20.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                 <color key="textColor" name="TealColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gold Foodies" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a2v-S2-9PQ">
-                                <rect key="frame" x="132" y="89.5" width="93" height="20.5"/>
+                                <rect key="frame" x="132" y="95.5" width="93" height="20.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
                                 <color key="textColor" name="GreenColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AJs-GD-h0Z">
-                                <rect key="frame" x="364" y="20" width="100" height="30"/>
+                                <rect key="frame" x="364" y="5" width="100" height="46"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Follow" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jq1-Rc-Z4K">
-                                        <rect key="frame" x="24" y="3" width="52.5" height="23.5"/>
+                                        <rect key="frame" x="24" y="11" width="52.5" height="23.5"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -62,32 +62,32 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="6wW-MX-PJf"/>
                                     <constraint firstItem="Jq1-Rc-Z4K" firstAttribute="centerY" secondItem="AJs-GD-h0Z" secondAttribute="centerY" id="7wA-sp-Zat"/>
-                                    <constraint firstAttribute="height" constant="30" id="W19-yd-naK"/>
+                                    <constraint firstAttribute="height" constant="46" id="W19-yd-naK"/>
                                     <constraint firstItem="Jq1-Rc-Z4K" firstAttribute="centerX" secondItem="AJs-GD-h0Z" secondAttribute="centerX" id="u2e-lv-kcz"/>
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="IMx-OM-qao" firstAttribute="leading" secondItem="b79-YH-Aix" secondAttribute="trailing" constant="16" id="07e-2f-yiH"/>
-                            <constraint firstItem="Rd4-eB-5gQ" firstAttribute="leading" secondItem="IMx-OM-qao" secondAttribute="leading" id="37n-n2-jFY"/>
-                            <constraint firstItem="AJs-GD-h0Z" firstAttribute="top" secondItem="b79-YH-Aix" secondAttribute="top" constant="10" id="4Dc-Vm-s69"/>
-                            <constraint firstItem="b79-YH-Aix" firstAttribute="centerY" secondItem="TJo-Tp-2an" secondAttribute="centerY" constant="-5" id="8U6-HQ-afx"/>
-                            <constraint firstItem="IMx-OM-qao" firstAttribute="trailing" secondItem="AJs-GD-h0Z" secondAttribute="leading" constant="-5" id="9wY-f4-6Ai"/>
-                            <constraint firstItem="a2v-S2-9PQ" firstAttribute="leading" secondItem="Rd4-eB-5gQ" secondAttribute="leading" id="IHS-vI-srh"/>
-                            <constraint firstItem="Rd4-eB-5gQ" firstAttribute="centerY" secondItem="b79-YH-Aix" secondAttribute="centerY" id="J7d-3n-ATm"/>
-                            <constraint firstItem="IMx-OM-qao" firstAttribute="top" secondItem="b79-YH-Aix" secondAttribute="top" constant="10" id="Qf3-XZ-Pzk"/>
-                            <constraint firstItem="a2v-S2-9PQ" firstAttribute="bottom" secondItem="b79-YH-Aix" secondAttribute="bottom" id="U6l-fq-qvv"/>
-                            <constraint firstItem="b79-YH-Aix" firstAttribute="leading" secondItem="TJo-Tp-2an" secondAttribute="leading" constant="16" id="iFM-4y-bKs"/>
-                            <constraint firstAttribute="trailing" secondItem="AJs-GD-h0Z" secondAttribute="trailing" constant="16" id="jDD-y9-eeE"/>
+                            <constraint firstItem="a2v-S2-9PQ" firstAttribute="leading" secondItem="IMx-OM-qao" secondAttribute="leading" id="0fW-vr-qG2"/>
+                            <constraint firstAttribute="trailing" secondItem="AJs-GD-h0Z" secondAttribute="trailing" constant="16" id="0nD-wL-yAY"/>
+                            <constraint firstItem="Rd4-eB-5gQ" firstAttribute="leading" secondItem="IMx-OM-qao" secondAttribute="leading" id="4Za-R2-aXe"/>
+                            <constraint firstItem="IMx-OM-qao" firstAttribute="top" secondItem="b79-YH-Aix" secondAttribute="top" id="CE2-49-dFI"/>
+                            <constraint firstItem="b79-YH-Aix" firstAttribute="top" secondItem="TJo-Tp-2an" secondAttribute="top" constant="16" id="Lj9-eP-zhP"/>
+                            <constraint firstItem="a2v-S2-9PQ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Rd4-eB-5gQ" secondAttribute="bottom" constant="16" id="Man-F7-TJj"/>
+                            <constraint firstItem="AJs-GD-h0Z" firstAttribute="leading" secondItem="IMx-OM-qao" secondAttribute="trailing" id="ZiA-mA-2o3"/>
+                            <constraint firstItem="IMx-OM-qao" firstAttribute="leading" secondItem="b79-YH-Aix" secondAttribute="trailing" constant="16" id="bvS-vU-xcD"/>
+                            <constraint firstItem="b79-YH-Aix" firstAttribute="leading" secondItem="TJo-Tp-2an" secondAttribute="leading" constant="16" id="m4j-k9-T6s"/>
+                            <constraint firstItem="AJs-GD-h0Z" firstAttribute="centerY" secondItem="IMx-OM-qao" secondAttribute="centerY" id="ubW-cV-HvK"/>
+                            <constraint firstItem="a2v-S2-9PQ" firstAttribute="bottom" secondItem="b79-YH-Aix" secondAttribute="bottom" id="vXn-RS-nNQ"/>
+                            <constraint firstItem="Rd4-eB-5gQ" firstAttribute="top" secondItem="IMx-OM-qao" secondAttribute="bottom" constant="5" id="wsY-bg-fzM"/>
                         </constraints>
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="TJo-Tp-2an" secondAttribute="trailing" id="T7d-nF-xqF"/>
-                    <constraint firstAttribute="bottom" secondItem="TJo-Tp-2an" secondAttribute="bottom" id="iZe-jh-uPk"/>
-                    <constraint firstItem="TJo-Tp-2an" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="m75-6r-asS"/>
-                    <constraint firstItem="TJo-Tp-2an" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="xUC-BD-pql"/>
+                    <constraint firstItem="TJo-Tp-2an" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="14" id="44A-b9-aaC"/>
+                    <constraint firstAttribute="trailing" secondItem="TJo-Tp-2an" secondAttribute="trailing" id="GhA-1v-EIP"/>
+                    <constraint firstAttribute="bottom" secondItem="TJo-Tp-2an" secondAttribute="bottom" constant="2" id="d7L-Yt-6Jb"/>
+                    <constraint firstItem="TJo-Tp-2an" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="u9Z-xs-5A4"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -95,7 +95,7 @@
                 <outlet property="ivFaceImage" destination="b79-YH-Aix" id="qVR-9a-1vb"/>
                 <outlet property="viewFollow" destination="AJs-GD-h0Z" id="FpT-2p-fJA"/>
             </connections>
-            <point key="canvasLocation" x="253.62318840579712" y="196.37276785714286"/>
+            <point key="canvasLocation" x="253.62318840579712" y="200.55803571428569"/>
         </tableViewCell>
     </objects>
     <resources>
